--- a/app/css/app.css
+++ b/app/css/app.css
@@ -16,8 +16,8 @@
   color: #000;
   background-color: #ccc;
   top: 0;
-  right:0;
-  position: 0;
+/*  right:0;
+  position: 0;*/
 }
 .scrollable {
 	overflow: auto; 
