--- a/app/partials/draftboard.html
+++ b/app/partials/draftboard.html
@@ -1,99 +1,106 @@
   <div class="container-fluid">
+    <!-- main row -->
     <div class="row-fluid">
+	  <!-- Left -->
       <div class="span4">
-        <!--Sidebar content-->
-		<label>Search:</label>
-		<input ng-model="query" type="text" placeholder="Search Player...">
-        <select ng-model="player.pos">
-          <option value="">All</option>
-          <option value="qb">QB</option>
-          <option value="rb">RB</option>
-          <option value="wr">WR</option>
-          <option value="te">TE</option>
-          <option value="k">K</option>
-        </select>
-		<div class="scrollable player-list">
-			<table class="table table-bordered table-hover">
-			  <thead>
-				<tr><th>Adj. Score</th><th>Points</th><th>Player Name</th><th>Position</th><th>Team</th></tr>
-			  </thead>
-			  <tbody>
-			  <tr ng-class="{success: player.selected}" ng-repeat="player in players | filter:query | filter:player | orderBy:playerOrderProp" ng-click="selectPlayer(player)">
-				<td><strong>{{player.adjustedScore}}</strong></td>
-				<td><strong>{{player.fpts}}</strong></td>
-				<td>{{player.PlayerName}}</td>
-				<td>{{player.pos}}</td>
-				<td><strong>{{player.Team}}</strong></td>
-			  </tr>
-			  </tbody>
-			</table>
+	    <div class="row-fluid">
+			<label>Search:</label>
+			<input ng-model="query" type="text" placeholder="Search Player...">
+			<select ng-model="player.pos">
+			  <option value="">All</option>
+			  <option value="qb">QB</option>
+			  <option value="rb">RB</option>
+			  <option value="wr">WR</option>
+			  <option value="te">TE</option>
+			  <option value="k">K</option>
+			</select>
+			<div class="scrollable player-list">
+				<table class="table table-bordered table-hover">
+				  <thead>
+					<tr><th>Adj. Score</th><th>Points</th><th>Player Name</th><th>Position</th><th>Team</th></tr>
+				  </thead>
+				  <tbody>
+				  <tr ng-class="{success: player.selected}" ng-repeat="player in players | filter:query | filter:player | orderBy:playerOrderProp" ng-click="selectPlayer(player)">
+					<td><strong>{{player.adjustedScore}}</strong></td>
+					<td><strong>{{player.fpts}}</strong></td>
+					<td>{{player.PlayerName}}</td>
+					<td>{{player.pos}}</td>
+					<td><strong>{{player.Team}}</strong></td>
+				  </tr>
+				  </tbody>
+				</table>
+			</div>
 		</div>
-      </div>
-      <div class="span8">
-        <label>Selecting Player: {{selectingPlayer.PlayerName}}</label>
-        <label>Selecting Team: {{selectingTeam.FTeamName}}</label>
-		<label>Team Needs:</label>
-		<button ng-disabled="!selectingPlayer || (selectingTeam.players && selectingTeam.players.length > 0) || selectingPlayer.selected" class="btn btn-primary" ng-click="commitSelection()">Player Drafted</button>
-		<div id="myCarousel" class="carousel slide" data-interval="false">
-		  <div ng-init="rounds = [
-			{round:1, selection:0},
-			{round:2, selection:12},
-			{round:3, selection:24},
-			{round:4, selection:36},
-			{round:5, selection:48},
-			{round:6, selection:60},
-			{round:7, selection:72},
-			{round:8, selection:84},
-			{round:9, selection:96},
-			{round:10, selection:108},
-			{round:11, selection:120},
-			{round:12, selection:132}
-		  ]">
-		  <ol class="carousel-indicators">
-			<li ng-repeat="round in rounds" data-target="#myCarousel" data-slide-to="{{round.selection}}"></li>
-		  </ol>
-		</div>
-		  <!-- Carousel items -->
-		  <div class="carousel-inner">
-			<div ng-class="{active : $first, item: true}" ng-repeat="drafter in DraftOrder | orderBy:'selection'">
-			  <div class="draft-team-list">
-				<div class="draft-list">
-					<table class="table table-bordered table-hover">
-			  		<thead>
-						<tr><th>Points</th><th>Player Name</th><th>Position</th><th>Team</th></tr>
-			  		</thead>
-			  		<tbody>
-			  			<tr ng-repeat="player in drafter.players" ng-click="removePlayer(player, drafter)">
-							<td><strong>{{player.fpts}}</strong></td>
-							<td>{{player.PlayerName}}</td>
-							<td>{{player.pos}}</td>
-							<td><strong>{{player.Team}}</strong></td>
-			  			</tr>
-			  		</tbody>
-					</table>
+	  </div>
+	  <!-- Right -->
+	  <div class="span8">
+	    <div class="row-fluid"><div class="span8"><span class="label">Selecting Player:</span> {{selectingPlayer.PlayerName}}</div></div>
+	    <div class="row-fluid"><div class="span8"><span class="label label-info">Selecting Team:</span> {{selectingTeam.FTeamName}}</div></div>
+		<div class="row-fluid"><div class="span8"><button class="btn btn-primary" ng-disabled="!selectingPlayer || (selectingTeam.players && selectingTeam.players.length > 0) || selectingPlayer.selected" ng-click="commitSelection()">Player Drafted</button></div></div>
+		<div class="row-fluid">
+		  <div class="span12">
+		    <div class="row-fluid">
+              <div id="myCarousel" class="carousel slide" data-interval="false">
+				  <!-- Carousel items -->
+				  <div class="carousel-inner">
+					<div ng-class="{active : $first, item: true}" ng-repeat="drafter in DraftOrder | orderBy:'selection'">
+					  <div class="draft-team-list">
+						<div class="draft-list">
+							<table class="table table-bordered table-hover">
+							<thead>
+								<tr><th>Points</th><th>Player Name</th><th>Position</th><th>Team</th></tr>
+							</thead>
+							<tbody>
+								<tr ng-repeat="player in drafter.players" ng-click="removePlayer(player, drafter)">
+									<td><strong>{{player.fpts}}</strong></td>
+									<td>{{player.PlayerName}}</td>
+									<td>{{player.pos}}</td>
+									<td><strong>{{player.Team}}</strong></td>
+								</tr>
+							</tbody>
+							</table>
+						</div>
+						<div class="carousel-caption">
+							<h4># {{drafter.selection}} - {{drafter.FTeamName}}</h4>
+							<h4>Round: {{drafter.round}}</h4>
+						</div>
+					  </div>
+					</div>
+				  </div>
+				  <div class="row-fluid">
+				    <div class="span12">
+				      <!-- Carousel nav -->
+				      <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+				      <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
+					</div>
+                  </div>
+				  <div class="row-fluid">
+				    <div class="span12">
+					  <div ng-init="rounds = [{round:1, selection:0},{round:2, selection:12},{round:3, selection:24},
+						{round:4, selection:36},{round:5, selection:48},{round:6, selection:60},{round:7, selection:72},
+						{round:8, selection:84},{round:9, selection:96},{round:10, selection:108},{round:11, selection:120},
+						{round:12, selection:132}]">
+						<ol class="carousel-indicators">
+						  <li ng-repeat="round in rounds" data-target="#myCarousel" data-slide-to="{{round.selection}}"></li>
+						</ol>
+					  </div>
+					</div>
+				  </div>
+				  <div class="row-fluid">
+				    <div class="span4">
+						<h1>Stats</h1>
+						<button class="btn btn-info" ng-click="computePlayerDropoff()">Compute Player Drop Off</button>
+						<div class="row-fluid" ng-repeat="dropoff in dropOffs | orderBy:'-value'">
+							<h4>{{dropoff.pos}} : {{dropoff.value}}</h4>
+							<p>Highest Rated: {{dropoff.best.PlayerName}} - {{dropoff.best.adjustedScore}}</p>
+							<p>Next Round: {{dropoff.next.PlayerName}} - {{dropoff.next.adjustedScore}}</p>
+						</div>
+					</div>
+				  </div>
 				</div>
-                <div class="carousel-caption">
-					<h4># {{drafter.selection}} - {{drafter.FTeamName}}</h4>
-					<h4>Round: {{drafter.round}}</h4>
-				</div>
-			  </div>
 			</div>
 		  </div>
-		  <!-- Carousel nav -->
-		  <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-		  <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
 		</div>
-		<div>
-			<h1>Stats</h1>
-			<button class="btn btn-info" ng-click="computePlayerDropoff()">Compute Player Drop Off</button>
-			<h3>{{selectionGap}}</h3>
-			<div ng-repeat="dropoff in dropOffs | orderBy:'-value'">
-				<h4>{{dropoff.pos}} : {{dropoff.value}}</h4>
-				<p>Highest Rated: {{dropoff.best.PlayerName}} - {{dropoff.best.adjustedScore}}</p>
-				<p>Next Round: {{dropoff.next.PlayerName}} - {{dropoff.next.adjustedScore}}</p>
-			</div>
-		</div>
-	  </div>
-	  </div>
-    </div>
+      </div>
+	</div>
   </div>
