--- a/app/partials/draftboard.html
+++ b/app/partials/draftboard.html
@@ -4,7 +4,7 @@
 	  <!-- Left -->
       <div class="span4">
 	    <div class="row-fluid">
-			<label>Search:</label>
+			<label>Player Search:</label>
 			<input ng-model="query" type="text" placeholder="Search Player...">
 			<select ng-model="player.pos">
 			  <option value="">All</option>
@@ -34,72 +34,70 @@
 	  </div>
 	  <!-- Right -->
 	  <div class="span8">
-	    <div class="row-fluid"><div class="span8"><span class="label">Selecting Player:</span> {{selectingPlayer.PlayerName}}</div></div>
-	    <div class="row-fluid"><div class="span8"><span class="label label-info">Selecting Team:</span> {{selectingTeam.FTeamName}}</div></div>
-		<div class="row-fluid"><div class="span8"><button class="btn btn-primary" ng-disabled="!selectingPlayer || (selectingTeam.players && selectingTeam.players.length > 0) || selectingPlayer.selected" ng-click="commitSelection()">Player Drafted</button></div></div>
 		<div class="row-fluid">
 		  <div class="span12">
 		    <div class="row-fluid">
-              <div id="myCarousel" class="carousel slide" data-interval="false">
-				  <!-- Carousel items -->
-				  <div class="carousel-inner">
-					<div ng-class="{active : $first, item: true}" ng-repeat="drafter in DraftOrder | orderBy:'selection'">
-					  <div class="draft-team-list">
-						<div class="draft-list">
-							<table class="table table-bordered table-hover">
-							<thead>
-								<tr><th>Points</th><th>Player Name</th><th>Position</th><th>Team</th></tr>
-							</thead>
-							<tbody>
-								<tr ng-repeat="player in drafter.players" ng-click="removePlayer(player, drafter)">
-									<td><strong>{{player.fpts}}</strong></td>
-									<td>{{player.PlayerName}}</td>
-									<td>{{player.pos}}</td>
-									<td><strong>{{player.Team}}</strong></td>
-								</tr>
-							</tbody>
-							</table>
-						</div>
-						<div class="carousel-caption">
-							<h4># {{drafter.selection}} - {{drafter.FTeamName}}</h4>
-							<h4>Round: {{drafter.round}}</h4>
-						</div>
-					  </div>
-					</div>
-				  </div>
-				  <div class="row-fluid">
-				    <div class="span12">
-				      <!-- Carousel nav -->
-				      <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-				      <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
-					</div>
-                  </div>
-				  <div class="row-fluid">
-				    <div class="span12">
-					  <div ng-init="rounds = [{round:1, selection:0},{round:2, selection:12},{round:3, selection:24},
-						{round:4, selection:36},{round:5, selection:48},{round:6, selection:60},{round:7, selection:72},
-						{round:8, selection:84},{round:9, selection:96},{round:10, selection:108},{round:11, selection:120},
-						{round:12, selection:132}]">
-						<ol class="carousel-indicators">
-						  <li ng-repeat="round in rounds" data-target="#myCarousel" data-slide-to="{{round.selection}}"></li>
-						</ol>
-					  </div>
-					</div>
-				  </div>
-				  <div class="row-fluid">
-				    <div class="span4">
-						<h1>Stats</h1>
-						<button class="btn btn-info" ng-click="computePlayerDropoff()">Compute Player Drop Off</button>
-						<div class="row-fluid" ng-repeat="dropoff in dropOffs | orderBy:'-value'">
-							<h4>{{dropoff.pos}} : {{dropoff.value}}</h4>
-							<p>Highest Rated: {{dropoff.best.PlayerName}} - {{dropoff.best.adjustedScore}}</p>
-							<p>Next Round: {{dropoff.next.PlayerName}} - {{dropoff.next.adjustedScore}}</p>
-						</div>
-					</div>
-				  </div>
-				</div>
+		      <div class="span4">
+			<label>Draft Board Search:</label>
+			<input ng-model="dquery" type="text" placeholder="Team ...">
+			<select ng-model="drafter.round">
+			  <option value="">All</option>
+			  <option value="1">1</option>
+			  <option value="2">2</option>
+			  <option value="3">3</option>
+			  <option value="4">4</option>
+			  <option value="5">5</option>
+			  <option value="6">6</option>
+			  <option value="7">7</option>
+			  <option value="8">8</option>
+			  <option value="9">9</option>
+			  <option value="10">10</option>
+			  <option value="11">11</option>
+			  <option value="12">12</option>
+			</select>
+		    </div>
+			  <div class="row-fluid">
+		      <div class="span12 scrollable draft-list">
+		        <table class="table table-bordered table-hover">
+		          <thead>
+		            <tr><th>Selection</th><th>Round</th><th>Fantasy Team</th><th>Player Name</th><th>Player Team</th><th>Player Pos</th></tr>
+		          </thead>
+		          <tbody>
+		          <tr ng-class="{warning: drafter.selecting}" ng-repeat="drafter in DraftOrder | filter:dquery | filter:drafter | orderBy:'selection'" ng-click="selectTeam(drafter)" ng-dblclick="removePlayer(drafter)">
+		            <td>{{drafter.selection}}</td>
+		            <td>{{drafter.round}}</td>
+		            <td>{{drafter.FTeamName}}</td>
+		            <td>{{drafter.player.PlayerName}}</td>
+		            <td>{{drafter.player.Team}}</td>
+		            <td>{{drafter.player.pos}}</td>
+		          </tr>
+		          </tbody>
+		        </table>
+		      </div>
+		      </div>
 			</div>
 		  </div>
+	    <div class="row-fluid"><div class="span8"><span class="label">Selection:</span> <strong>{{selectingPlayer.PlayerName}}</strong> Selected By <strong>{{selectingTeam.FTeamName}}</strong></div></div>
+		<div class="row-fluid"><div class="span8"><button class="btn btn-primary" ng-disabled="!selectingPlayer || (selectingTeam.players && selectingTeam.players.length > 0) || selectingPlayer.selected" ng-click="commitSelection()">Commit Selection</button></div></div>
+		<div modal="showNeeds" close="close()" options="opts">
+        <div class="modal-header">
+            <h3>{{selectingTeam.FTeamName}}</h3>
+        </div>
+        <div class="modal-body">
+          <div class="row-fluid">
+			<div class="span6">
+              <div class="row-fluid" ng-repeat="dropoff in dropOffs | orderBy:'-value'">
+                <h4>{{dropoff.pos}} : {{dropoff.value}}</h4>
+                <p>Highest Rated: {{dropoff.best.PlayerName}} - {{dropoff.best.adjustedScore}}</p>
+                <p>Next Round: {{dropoff.next.PlayerName}} - {{dropoff.next.adjustedScore}}</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-warning cancel" ng-click="close()">Cancel</button>
+        </div>
+    </div>
 		</div>
       </div>
 	</div>
