--- a/app/css/app.css
+++ b/app/css/app.css
@@ -2,9 +2,13 @@
 
 .player-list {
 	height: 500px;
+	border: 1px solid #888;
+	border-radius:3px;
 }
 .draft-list {
 	height: 500px;
+	border: 1px solid #888;
+	border-radius:3px;
 }
 .draft-team-list {
 	height: 160px;
