--- a/app/partials/draftboard.html
+++ b/app/partials/draftboard.html
@@ -1,104 +1,117 @@
-  <div class="container-fluid">
-    <!-- main row -->
-    <div class="row-fluid">
-	  <!-- Left -->
-      <div class="span4">
-	    <div class="row-fluid">
-			<label>Player Search:</label>
-			<input ng-model="query" type="text" placeholder="Search Player...">
-			<select ng-model="player.pos">
-			  <option value="">All</option>
-			  <option value="qb">QB</option>
-			  <option value="rb">RB</option>
-			  <option value="wr">WR</option>
-			  <option value="te">TE</option>
-			  <option value="k">K</option>
-			</select>
-			<div class="scrollable player-list">
-				<table class="table table-bordered table-hover">
-				  <thead>
-					<tr><th>Adj. Score</th><th>Points</th><th>Player Name</th><th>Position</th><th>Team</th></tr>
-				  </thead>
-				  <tbody>
-				  <tr ng-class="{success: player.selected}" ng-repeat="player in players | filter:query | filter:player | orderBy:playerOrderProp" ng-click="selectPlayer(player)">
-					<td><strong>{{player.adjustedScore}}</strong></td>
-					<td><strong>{{player.fpts}}</strong></td>
-					<td>{{player.PlayerName}}</td>
-					<td>{{player.pos}}</td>
-					<td><strong>{{player.Team}}</strong></td>
-				  </tr>
-				  </tbody>
-				</table>
-			</div>
-		</div>
-	  </div>
-	  <!-- Right -->
-	  <div class="span8">
-		<div class="row-fluid">
-		  <div class="span12">
-		    <div class="row-fluid">
-		      <div class="span4">
-			<label>Draft Board Search:</label>
-			<input ng-model="dquery" type="text" placeholder="Team ...">
-			<select ng-model="drafter.round">
-			  <option value="">All</option>
-			  <option value="1">1</option>
-			  <option value="2">2</option>
-			  <option value="3">3</option>
-			  <option value="4">4</option>
-			  <option value="5">5</option>
-			  <option value="6">6</option>
-			  <option value="7">7</option>
-			  <option value="8">8</option>
-			  <option value="9">9</option>
-			  <option value="10">10</option>
-			  <option value="11">11</option>
-			  <option value="12">12</option>
-			</select>
-		    </div>
-			  <div class="row-fluid">
-		      <div class="span12 scrollable draft-list">
-		        <table class="table table-bordered table-hover">
-		          <thead>
-		            <tr><th>Selection</th><th>Round</th><th>Fantasy Team</th><th>Player Name</th><th>Player Team</th><th>Player Pos</th></tr>
-		          </thead>
-		          <tbody>
-		          <tr ng-class="{warning: drafter.selecting}" ng-repeat="drafter in DraftOrder | filter:dquery | filter:drafter | orderBy:'selection'" ng-click="selectTeam(drafter)" ng-dblclick="removePlayer(drafter)">
-		            <td>{{drafter.selection}}</td>
-		            <td>{{drafter.round}}</td>
-		            <td>{{drafter.FTeamName}}</td>
-		            <td>{{drafter.player.PlayerName}}</td>
-		            <td>{{drafter.player.Team}}</td>
-		            <td>{{drafter.player.pos}}</td>
-		          </tr>
-		          </tbody>
-		        </table>
-		      </div>
-		      </div>
-			</div>
-		  </div>
-	    <div class="row-fluid"><div class="span8"><span class="label">Selection:</span> <strong>{{selectingPlayer.PlayerName}}</strong> Selected By <strong>{{selectingTeam.FTeamName}}</strong></div></div>
-		<div class="row-fluid"><div class="span8"><button class="btn btn-primary" ng-disabled="!selectingPlayer || (selectingTeam.players && selectingTeam.players.length > 0) || selectingPlayer.selected" ng-click="commitSelection()">Commit Selection</button></div></div>
-		<div modal="showNeeds" close="close()" options="opts">
-        <div class="modal-header">
-            <h3>{{selectingTeam.FTeamName}}</h3>
+<div class="container-fluid">
+  <!-- main row -->
+  <div class="row-fluid">
+    <!-- Left -->
+    <div class="span4">
+      <div class="row-fluid">
+        <label>Player Search:</label>
+        <input ng-model="query" type="text" placeholder="Search Player...">
+        <select ng-model="player.pos">
+          <option value="">All</option>
+          <option value="qb">QB</option>
+          <option value="rb">RB</option>
+          <option value="wr">WR</option>
+          <option value="te">TE</option>
+          <option value="k">K</option>
+        </select>
+        <div class="scrollable player-list">
+          <table class="table table-bordered table-hover">
+            <thead>
+              <tr>
+                <th>Adj. Score</th>
+                <th>Points</th>
+                <th>Player Name</th>
+                <th>Position</th>
+                <th>Team</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr ng-class="{success: player.selected}" ng-repeat="player in players | filter:query | filter:player | orderBy:playerOrderProp" ng-click="selectPlayer(player)">
+                <td><strong>{{player.adjustedScore}}</strong></td>
+                <td><strong>{{player.fpts}}</strong></td>
+                <td>{{player.PlayerName}}</td>
+                <td>{{player.pos}}</td>
+                <td><strong>{{player.Team}}</strong></td>
+              </tr>
+            </tbody>
+          </table>
         </div>
-        <div class="modal-body">
+      </div>
+    </div>
+    <!-- Right -->
+    <div class="span8">
+      <div class="row-fluid">
+        <div class="span12">
           <div class="row-fluid">
-			<div class="span6">
-              <div class="row-fluid" ng-repeat="dropoff in dropOffs | orderBy:'-value'">
-                <h4>{{dropoff.pos}} : {{dropoff.value}}</h4>
-                <p>Highest Rated: {{dropoff.best.PlayerName}} - {{dropoff.best.adjustedScore}}</p>
-                <p>Next Round: {{dropoff.next.PlayerName}} - {{dropoff.next.adjustedScore}}</p>
+            <div class="span4">
+              <label>Draft Board Search:</label>
+              <input ng-model="dquery" type="text" placeholder="Team ...">
+              <select ng-model="drafter.round">
+                <option value="">All</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+                <option value="11">11</option>
+                <option value="12">12</option>
+              </select>
+            </div>
+			<div class="span8">
+				<div class="row-fluid"><div class="span12"><span class="label">Selection:</span> <strong>{{selectingPlayer.PlayerName}}</strong> Selected <strong>#{{selectingTeam.selection}}</strong> By <strong>{{selectingTeam.FTeamName}}</strong></div></div>
+				<div class="row-fluid"><div class="span5"><button class="btn btn-primary" ng-disabled="!selectingPlayer || (selectingTeam.players && selectingTeam.players.length > 0) || selectingPlayer.selected" ng-click="commitSelection()">Commit Selection</button></div></div>
+				<div modal="showNeeds" close="close()" options="opts">
+				  <div class="modal-header"><h3>{{selectingTeam.FTeamName}}</h3></div>
+				  <div class="modal-body">
+					<div class="row-fluid">
+					  <div class="span6">
+						<div class="row-fluid" ng-repeat="dropoff in dropOffs | orderBy:'-value'">
+						  <h4>{{dropoff.pos}} : {{dropoff.value}}</h4>
+						  <p>Highest Rated: {{dropoff.best.PlayerName}} - {{dropoff.best.adjustedScore}}</p>
+						  <p>Next Round: {{dropoff.next.PlayerName}} - {{dropoff.next.adjustedScore}}</p>
+						</div>
+					  </div>
+					</div>
+				  </div>
+				  <div class="modal-footer">
+					<button class="btn btn-warning cancel" ng-click="close()">Cancel</button>
+				  </div>
+				</div>
+			</div>
+            <div class="row-fluid">
+              <div class="span12 scrollable draft-list">
+                <table class="table table-bordered table-hover">
+                  <thead>
+                    <tr>
+                      <th>Selection</th>
+                      <th>Round</th>
+                      <th>Fantasy Team</th>
+                      <th>Player Name</th>
+                      <th>Player Team</th>
+                      <th>Player Pos</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr ng-class="{warning: drafter.selecting}" ng-repeat="drafter in DraftOrder | filter:dquery | filter:drafter | orderBy:'selection'" ng-click="selectTeam(drafter)" ng-dblclick="removePlayer(drafter)">
+                      <td>{{drafter.selection}}</td>
+                      <td>{{drafter.round}}</td>
+                      <td>{{drafter.FTeamName}}</td>
+                      <td>{{drafter.player.PlayerName}}</td>
+                      <td>{{drafter.player.Team}}</td>
+                      <td>{{drafter.player.pos}}</td>
+                    </tr>
+                  </tbody>
+                </table>
               </div>
             </div>
           </div>
         </div>
-        <div class="modal-footer">
-            <button class="btn btn-warning cancel" ng-click="close()">Cancel</button>
-        </div>
-    </div>
-		</div>
       </div>
-	</div>
+    </div>
   </div>
+</div>
