--- a/app/partials/teams.html
+++ b/app/partials/teams.html
@@ -1,7 +1,7 @@
   <div class="container-fluid">
       <div class="span12">
 		  <div class="span4" ng-repeat="fteam in fteams | orderBy:fteamOrderProp">
-		    <h4>{{fteam.FantasyTeam}}</h4>
+		    <h4>{{fteam.FantasyTeam}} - {{getTeamTotal(fteam)}}</h4>
 			<div class="scrollable player-list">
 				<table class="table table-bordered table-hover">
 				  <thead>
