--- a/app/partials/draftboard.html
+++ b/app/partials/draftboard.html
@@ -109,6 +109,14 @@
                 </table>
               </div>
             </div>
+			
+					<div class="row-fluid">
+						<div class="span4" ng-repeat="dropoff in dropOffs | orderBy:'-value'">
+						  <h4>{{dropoff.pos}} : {{dropoff.value}}</h4>
+						  <p>Highest Rated: {{dropoff.best.PlayerName}} - {{dropoff.best.adjustedScore}}</p>
+						  <p>Next Round: {{dropoff.next.PlayerName}} - {{dropoff.next.adjustedScore}}</p>
+						</div>
+					</div>
           </div>
         </div>
       </div>
